View Room Completed

--- a/dashboard/Properties/Resources.resx
+++ b/dashboard/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="Detective_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Detective_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Trash_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Trash_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="icons8_Minimize_Window_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\icons8_Minimize_Window_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -163,7 +166,7 @@
   <data name="icons9_Minimize_Window_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\icons9_Minimize_Window_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Trash_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Trash_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Eye_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eye_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
