--- a/dashboard/Properties/Resources.resx
+++ b/dashboard/Properties/Resources.resx
@@ -121,8 +121,8 @@
   <data name="Detective_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Detective_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Trash_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Trash_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Eye_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Eye_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons8_Minimize_Window_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\icons8_Minimize_Window_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -130,14 +130,17 @@
   <data name="Search_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Search_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="icons8_Delete_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\ICONS\icons8_Delete_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Trash_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Trash_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Edit_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Edit_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Key_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\Key_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Erase_100px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ICONS\Erase_100px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Add User Male_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\Add User Male_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -160,13 +163,16 @@
   <data name="icons8_Restore_Window_641" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\icons8_Restore_Window_64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icons8_Delete_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ICONS\icons8_Delete_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Lock_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\Lock_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="icons9_Minimize_Window_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\ICONS\icons9_Minimize_Window_32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Eye_96px" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Eye_96px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Refresh_80px" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\ICONS\Refresh_80px.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
